<resources>
    <string name="app_name">Tranquil-a</string>
    <string name="login">Inicio de sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Elige el tipo de cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="loginNow">Toca para iniciar sesión</string>
    <string name="registerNow">Toca para crear una cuenta</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="asignarProfesor">Asignar profesor</string>
    <string name="escribeProfesor">Escribe el correo del profesor</string>
    <string name="nuevoEvento">Añadir Situación Puntual</string>
    <string name="configSituacionesPredet">Gestionar Situaciones Predeterminadas</string>
    <string name="borrar">Borrar</string>
    <string name="profesor">Soy Profesor</string>
    <string name="padre">Soy Padre</string>
    <string name="title_activity_principal_profesor">PrincipalProfesor</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crear_clase">Crear clase</string>
    <string name="aniadir_alumno">+ Alumnos</string>
    <string name="aniadir">Añadir</string>
    <string name="atras">Atrás</string>
    <string name="aniadirEventoAlumnoClase">+ Evento</string>
    <string name="verAlumnoClase">VER</string>
    <string name="aniadir_hijo">Añadir Hijo</string>
    <string name="codigo_alumno">Mostrar Código</string>
    <string name="aniadir_alumnos">Añadir alumnos</string>
    <string name="info_login">Para iniciar sesión necesitas haber creado una cuenta con uno de los roles permitidos. Introduce tu email y contraseña para poder iniciar sesión.</string>
    <string name="info_login_titulo">Información del inicio de sesión</string>
    <string name="situaciones">Situaciones</string>
    <string name="nueva_situacion_predeterminada">Nueva situación predeterminada</string>
</resources>