<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/registro"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/padreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/padre"
        style="@style/AcceptButtonStyle"
        ></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profesorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profesor"
        style="@style/AcceptButtonStyle"
        ></androidx.appcompat.widget.AppCompatButton>
</LinearLayout>