<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".VisualizarAlumno">

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/detallesAlumnoClase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:contentDescription="@string/situaciones"
        android:id="@+id/scrollEventosAlumnoClase"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/detallesAlumnoClase"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/eventosAlumnosClase"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detallesAlumnoClase">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/configSituacionesPredet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/configSituacionesPredet"
            style="@style/AcceptButtonStyle"></androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nuevoEventoAlumnoClase"
            style="@style/AcceptButtonStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/nuevoEvento"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollEventosAlumnoClase"></androidx.appcompat.widget.AppCompatButton>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/atrasAlumnoClase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BackButtonStyle"
            android:text="@string/atras"></androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>